# fy

./: README.md  git_auto.sh
.heartbeat/: last.json
00daily/: README.md
00daily/examples/: 01_class_object.cpp  02_raii_unique_ptr.cpp  05_stl_lambda.cpp  07_move_semantics.cpp
01hpc/: 01Blackwell.md
10ccdaily/: CMakeLists.txt
10ccdaily/docs/: cpp_core_features.drawio  learning_notes.md
10ccdaily/examples/: 03_inheritance_polymorphism.cpp  04_template.cpp  06_modern_cpp.cpp
10ccdaily/include/: tutorial.hpp
10ccdaily/scripts/: build.sh  run_all.sh
10ccdaily/src/: main.cpp
99script/: daily_report.py  report.sh  update_repo.sh
report/: TDR_20260617.md  TDR_20260618.md
